--- a/LECTURE 4-CIPHERSCHOOLS/HtmlTags.html
+++ b/LECTURE 4-CIPHERSCHOOLS/HtmlTags.html
@@ -12,14 +12,14 @@
     <h4>My Heading 4</h4>
     <h5>My Heading 5</h5>
     <h6>My Heading 6</h6>
-    <p>This is a paragraph.</p>
+    <p id="myParagraph">This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <a href="https://cipherschools.com">Go to cipherschools</a>
     <img src="https://ik.imagekit.io/cipherschools/CipherMentors/Aditya-100ms.png" alt="this is an image"/>
 
     <blockquote>Cipherschools is amazing</blockquote>
     <q>Harry Potter</q>
-    <p><abbr title="World Health Organization">WHO</abbr> is a good Organization</p>
+    <p class="center-Paragraph"><abbr title="World Health Organization">WHO</abbr> is a good Organization</p>
 
     <P>
         <address>
