--- a/LECTURE 8-CIPHERSCHOOLS/DOMtraversal.html
+++ b/LECTURE 8-CIPHERSCHOOLS/DOMtraversal.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page Title</title>
+  </head>
+  <body>
+    <main>
+        <h1>My Page Title</h1>
+        <p>Nice Caption goes here</p>
+        <article class="first_article">
+            <h2>List of amazing fruits</h2>
+            <p>Must eat fruits</p>
+
+            <div class="wrapper-1">
+                <ul class="apple-list">
+                    <li class="apple">Apples</li>
+                    <li class="orange">Oranges</li>
+                    <li class="avocado">Avocados</li>
+                    <li class="grape">
+                        Grapes
+                    <ul>
+                        <li class="type-1">Moon drops</li>
+                        <li>Sultana</li>
+                        <li>Concord</li>
+                        <li>Crimson Seedless</li>
+                    </ul>
+                    </li>
+                    <li class="banana">Bananas</li>
+                </ul>
+                <button class="btn-1">Read full list</button>
+            </div>
+        </article>
+
+      <article class="second_article">
+        <h2>Amazing places in Kenya</h2>
+        <p>Must visit places in Kenya</p>
+
+        <div class="wrapper-2">
+          <ul class="places-list">
+            <li>Masai Mara</li>
+            <li>Diani Beach</li>
+            <li>Watamu Beach</li>
+            <li>Amboseli National Park</li>
+            <li>Lake Nakuru</li>
+          </ul>
+          <button class="btn-2">Read Full List</button>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
