--- a/LECTURE 8-CIPHERSCHOOLS/DOMtraversal.html
+++ b/LECTURE 8-CIPHERSCHOOLS/DOMtraversal.html
@@ -51,3 +51,48 @@
     </main>
   </body>
 </html>
+
+
+<!-- selector method 
+ to be performed on terminal--> 
+ <!-- const headings = document.querySelectorAll("h2")
+ headings
+
+const firstHeading = headings[0]
+firstHeading
+    <h2>List of amazing fruits</h2>
+const seconHeading = headings[1]
+secondHeading
+    <h2>Amazing palces in Kenya</h2>
+
+document.querySelector(".orange").innerHTML
+ "Oranges"
+
+comst appleList = document.querySelector(".appleList")
+
+appleList.children
+
+appleList.childNodes
+
+appleLlist.firstChild
+
+appleList.lastChild
+
+appleList.parentElement
+      <div class="wrapper-1">..</div>
+appleList.parentNode
+      <div class="wrapper-1">..</div>
+const btn1 = document.querySelector(".btn-1")
+btn1.closest("main")
+      <main>...</main>
+btn1
+    <button class="btn-1">Read full List</button>
+const orange = document.querySelector(".orange")
+
+const apple  = orange.previousElemnentSibling;
+const avocado = orange.nextElementSibling;
+
+apple
+  <li class="apple">..</li>
+avocado
+  <li class="avocado">..</li> -->
