--- a/Module 1/Lecture7/index.html
+++ b/Module 1/Lecture7/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <form action="#" name="form">
-      <input name="name" value="Sujal" />
+      <input name="name" value="anjeet" />
     </form>
   </body>
 </html>
